--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_auth: ^4.10.0
   cloud_firestore: ^4.9.3
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
